objects/Contract.object
<CustomObject><fields>
        <fullName>Amount_Donated__c</fullName>
        <label>Amount Donated</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Amount_Paid_for_Membership__c</fullName>
        <label>Amount Paid for Membership</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Do_Not_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Renew</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Gift_Aid_Declaration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift Aid Declaration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Web Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Other_Amount_Paid__c</fullName>
        <label>Other Amount Paid</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews><listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews><listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews><listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews><listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews><listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews><listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews><recordTypes>
        <fullName>Annual_Membership</fullName>
        <active>true</active>
        <label>Annual Membership</label>
    </recordTypes></CustomObject>